# LectureNotetaker

./: .env.example  .gitignore  README.md  SETUP.md  build.py  config.py  main.py  pyproject.toml  requirements.txt
audio/: capture.py  resampler.py
export/: pdf.py
gui/: app.py
medical/: terms.py
screen/: analyzer.py  capture.py  selector.py
slides/: preanalyzer.py
stt/: deepgram_streaming.py  korean_dict.py  postprocess.py  refiner.py  streaming.py  transcript.py
tests/: test_file_audio.py  test_improvements.py  test_optimization.py
