[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lecture-notetaker"
version = "1.0.0"
description = "Real-time lecture notetaking system with speech recognition and PDF annotation"
requires-python = ">=3.11"
dependencies = [
    "PyAudioWPatch>=0.2.12",
    "google-cloud-speech>=2.20.0",
    "google-genai>=1.0.0",
    "PyMuPDF>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
lecture-notetaker = "main:main"
